# tabular_models

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.save  datasets.yaml  hooks.sh  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  restart.sh  runner.py  smoke_test.py
notebooks/: Del pipelines.ipynb  Download OpenML datasets.ipynb  Pipelines Chain.ipynb  Reg paths and feature selection.ipynb  ScoreDiff.ipynb  T CatBoostModel.ipynb  T LinearCV.ipynb  T Run pipeline.ipynb  imports.py
tabular_models/: __init__.py  data_store.py  dataset.py  dataset_splitter.py  parallel.py  pipeline_result.py  predictions.py  scores.py  task_type.py  utils.py
tabular_models/models/: __init__.py  base.py  catboost.py  linear.py  preproc.py  sklearn.py
tabular_models/pipelines/: __init__.py  base.py  catboost.py  linear.py  linear_base.py  scoring.py  single_feature.py
tests/: test_base.py  test_models.py  test_parallel.py
